src/parser-browser.js
markdownparser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = function(info) {
          return extractList(info);
        },
        peg$c3 = /^[1-9]/,
        peg$c4 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c5 = void 0,
        peg$c6 = { type: "any", description: "any character" },
        peg$c7 = "\r\n",
        peg$c8 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c9 = "\r",
        peg$c10 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c11 = "\n",
        peg$c12 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c13 = " ",
        peg$c14 = { type: "literal", value: " ", description: "\" \"" },
        peg$c15 = "\t",
        peg$c16 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c17 = /^[ -']/,
        peg$c18 = { type: "class", value: "[ -']", description: "[ -']" },
        peg$c19 = /^[+-@]/,
        peg$c20 = { type: "class", value: "[+-@]", description: "[+-@]" },
        peg$c21 = /^[A-Z]/,
        peg$c22 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c23 = /^[a-z]/,
        peg$c24 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c25 = /^[`-z]/,
        peg$c26 = { type: "class", value: "[`-z]", description: "[`-z]" },
        peg$c27 = /^[ -*]/,
        peg$c28 = { type: "class", value: "[ -*]", description: "[ -*]" },
        peg$c29 = /^[A-[]/,
        peg$c30 = { type: "class", value: "[A-[]", description: "[A-[]" },
        peg$c31 = /^[A-_]/,
        peg$c32 = { type: "class", value: "[A-_]", description: "[A-_]" },
        peg$c33 = /^[a-~]/,
        peg$c34 = { type: "class", value: "[a-~]", description: "[a-~]" },
        peg$c35 = /^[ -@]/,
        peg$c36 = { type: "class", value: "[ -@]", description: "[ -@]" },
        peg$c37 = /^[A-`]/,
        peg$c38 = { type: "class", value: "[A-`]", description: "[A-`]" },
        peg$c39 = /^[a-\xFFFF]/,
        peg$c40 = { type: "class", value: "[a-\\xFFFF]", description: "[a-\\xFFFF]" },
        peg$c41 = /^[\-]/,
        peg$c42 = { type: "class", value: "[\\-]", description: "[\\-]" },
        peg$c43 = null,
        peg$c44 = function(text) {
            return {
             others: text.join("")
            }
        },
        peg$c45 = "#",
        peg$c46 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c47 = function(text) {
            return {
             heading: text.join("")
            }
        },
        peg$c48 = function(text) {
            return {
             section: text.join("")
            }
        },
        peg$c49 = /^[*]/,
        peg$c50 = { type: "class", value: "[*]", description: "[*]" },
        peg$c51 = function(text) {
            return {
             italic: text.join("")
            }
        },
        peg$c52 = /^[_]/,
        peg$c53 = { type: "class", value: "[_]", description: "[_]" },
        peg$c54 = function(text) {
            return {
             bold: text.join("")
            }
          },
        peg$c55 = /^[~]/,
        peg$c56 = { type: "class", value: "[~]", description: "[~]" },
        peg$c57 = function(text) {
            return {
             strikethrough : text.join("")
            }
          },
        peg$c58 = "* ",
        peg$c59 = { type: "literal", value: "* ", description: "\"* \"" },
        peg$c60 = "- ",
        peg$c61 = { type: "literal", value: "- ", description: "\"- \"" },
        peg$c62 = function(text) {return text.join("").trim()},
        peg$c63 = "- [x] ",
        peg$c64 = { type: "literal", value: "- [x] ", description: "\"- [x] \"" },
        peg$c65 = "- [ ] ",
        peg$c66 = { type: "literal", value: "- [ ] ", description: "\"- [ ] \"" },
        peg$c67 = "  ",
        peg$c68 = { type: "literal", value: "  ", description: "\"  \"" },
        peg$c69 = ". ",
        peg$c70 = { type: "literal", value: ". ", description: "\". \"" },
        peg$c71 = function(lists) {
           return {
            lists: lists
           }
        },
        peg$c72 = function(tasks) {
           return {
            tasks: tasks
           }
        },
        peg$c73 = function(lists) {
           return {
            listsOrdered: lists
           }
        },
        peg$c74 = "html",
        peg$c75 = { type: "literal", value: "html", description: "\"html\"" },
        peg$c76 = "javascript",
        peg$c77 = { type: "literal", value: "javascript", description: "\"javascript\"" },
        peg$c78 = /^[`]/,
        peg$c79 = { type: "class", value: "[`]", description: "[`]" },
        peg$c80 = function(text) {return text.join("")},
        peg$c81 = "```",
        peg$c82 = { type: "literal", value: "```", description: "\"```\"" },
        peg$c83 = function(type, code) {
          return {
            code: code,
            type: type
          }
        },
        peg$c84 = /^[[]/,
        peg$c85 = { type: "class", value: "[[]", description: "[[]" },
        peg$c86 = /^[\]]/,
        peg$c87 = { type: "class", value: "[\\]]", description: "[\\]]" },
        peg$c88 = /^[(]/,
        peg$c89 = { type: "class", value: "[(]", description: "[(]" },
        peg$c90 = /^[)]/,
        peg$c91 = { type: "class", value: "[)]", description: "[)]" },
        peg$c92 = "",
        peg$c93 = function(title, href) {
             return {
              references: {
                title: title,
                href: href,
                image: isImage(href)
              }
             }
            },
        peg$c94 = /^[0-9a-f]/i,
        peg$c95 = { type: "class", value: "[0-9a-f]i", description: "[0-9a-f]i" },
        peg$c96 = /^[\x80-\uFFFF]/,
        peg$c97 = { type: "class", value: "[\\x80-\\uFFFF]", description: "[\\x80-\\uFFFF]" },
        peg$c98 = "\\",
        peg$c99 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c100 = /^[ \t\r\n\f]/,
        peg$c101 = { type: "class", value: "[ \\t\\r\\n\\f]", description: "[ \\t\\r\\n\\f]" },
        peg$c102 = function(digits) {
              return String.fromCharCode(parseInt(digits, 16));
            },
        peg$c103 = /^[^\r\n\f0-9a-f]/i,
        peg$c104 = { type: "class", value: "[^\\r\\n\\f0-9a-f]i", description: "[^\\r\\n\\f0-9a-f]i" },
        peg$c105 = function(ch) { return ch; },
        peg$c106 = /^[_a-z]/i,
        peg$c107 = { type: "class", value: "[_a-z]i", description: "[_a-z]i" },
        peg$c108 = /^[_a-z0-9\-]/i,
        peg$c109 = { type: "class", value: "[_a-z0-9\\-]i", description: "[_a-z0-9\\-]i" },
        peg$c110 = "\"",
        peg$c111 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c112 = /^[^\n\r\f\\"]/,
        peg$c113 = { type: "class", value: "[^\\n\\r\\f\\\\\"]", description: "[^\\n\\r\\f\\\\\"]" },
        peg$c114 = function(nl) { return ""; },
        peg$c115 = function(chars) {
              return chars.join("");
            },
        peg$c116 = "'",
        peg$c117 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c118 = /^[^\n\r\f\\']/,
        peg$c119 = { type: "class", value: "[^\\n\\r\\f\\\\']", description: "[^\\n\\r\\f\\\\']" },
        peg$c120 = /^[_a-zA-Z0-9\-\n]/,
        peg$c121 = { type: "class", value: "[_a-zA-Z0-9\\-\\n]", description: "[_a-zA-Z0-9\\-\\n]" },
        peg$c122 = function(chars) { return chars.join("")},
        peg$c123 = "/*",
        peg$c124 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c125 = /^[^*]/,
        peg$c126 = { type: "class", value: "[^*]", description: "[^*]" },
        peg$c127 = "*",
        peg$c128 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c129 = /^[^\/*]/,
        peg$c130 = { type: "class", value: "[^\\/*]", description: "[^\\/*]" },
        peg$c131 = "/",
        peg$c132 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c133 = "-",
        peg$c134 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c135 = function(prefix, start, chars) {
              return prefix + start + chars.join("");
            },
        peg$c136 = function(chars) { return chars.join(""); },
        peg$c137 = /^[+\-]/,
        peg$c138 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c139 = /^[0-9]/,
        peg$c140 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c141 = ".",
        peg$c142 = { type: "literal", value: ".", description: "\".\"" },
        peg$c143 = "e",
        peg$c144 = { type: "literal", value: "e", description: "\"e\"" },
        peg$c145 = function() {
              return parseFloat(text());
            },
        peg$c146 = /^[!#$%&*-[\]-~]/,
        peg$c147 = { type: "class", value: "[!#$%&*-[\\]-~]", description: "[!#$%&*-[\\]-~]" },
        peg$c148 = "\f",
        peg$c149 = { type: "literal", value: "\f", description: "\"\\f\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseMarkdown();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseMarkdown();
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseMarkdown() {
      var s0;

      s0 = peg$parseEndOfLine();
      if (s0 === peg$FAILED) {
        s0 = peg$parseHeading();
        if (s0 === peg$FAILED) {
          s0 = peg$parseBold();
          if (s0 === peg$FAILED) {
            s0 = peg$parseItalic();
            if (s0 === peg$FAILED) {
              s0 = peg$parseStrikethrough();
              if (s0 === peg$FAILED) {
                s0 = peg$parseTasks();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseLists();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseOrderedLists();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseInlineCode();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseMultiplelLineCode();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseReferences();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parseSection();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseOthers();
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseDigit1_9() {
      var s0;

      if (peg$c3.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }

      return s0;
    }

    function peg$parseEOF() {
      var s0, s1;

      s0 = peg$currPos;
      peg$silentFails++;
      if (input.length > peg$currPos) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      peg$silentFails--;
      if (s1 === peg$FAILED) {
        s0 = peg$c5;
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsecrlf() {
      var s0;

      if (input.substr(peg$currPos, 2) === peg$c7) {
        s0 = peg$c7;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c9;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s0 = peg$c11;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
        }
      }

      return s0;
    }

    function peg$parseEatLine() {
      var s0, s1, s2, s3, s4;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$parsecrlf();
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = peg$c5;
      } else {
        peg$currPos = s2;
        s2 = peg$c1;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$parseEOF();
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = peg$c5;
        } else {
          peg$currPos = s3;
          s3 = peg$c1;
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parsecrlf();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = peg$c5;
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = peg$parseEOF();
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = peg$c5;
          } else {
            peg$currPos = s3;
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            if (input.length > peg$currPos) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s4 !== peg$FAILED) {
              s2 = [s2, s3, s4];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$c1;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      }

      return s0;
    }

    function peg$parseEndOfLine() {
      var s0, s1;

      s0 = [];
      if (input.substr(peg$currPos, 2) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s1 = peg$c11;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s1 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 13) {
            s1 = peg$c9;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
        }
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          if (input.substr(peg$currPos, 2) === peg$c7) {
            s1 = peg$c7;
            peg$currPos += 2;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s1 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 10) {
              s1 = peg$c11;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s1 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 13) {
                s1 = peg$c9;
                peg$currPos++;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
            }
          }
        }
      } else {
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseSpace() {
      var s0, s1;

      s0 = [];
      if (input.charCodeAt(peg$currPos) === 32) {
        s1 = peg$c13;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          if (input.charCodeAt(peg$currPos) === 32) {
            s1 = peg$c13;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c14); }
          }
        }
      } else {
        s0 = peg$c1;
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 9) {
          s0 = peg$c15;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseEndOfLine();
        }
      }

      return s0;
    }

    function peg$parseAnyText() {
      var s0;

      if (peg$c17.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c19.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c21.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s0 === peg$FAILED) {
            if (peg$c23.test(input.charAt(peg$currPos))) {
              s0 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c24); }
            }
            if (s0 === peg$FAILED) {
              s0 = peg$parsenonascii();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseListText() {
      var s0;

      if (peg$c17.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c19.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c21.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s0 === peg$FAILED) {
            if (peg$c25.test(input.charAt(peg$currPos))) {
              s0 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c26); }
            }
            if (s0 === peg$FAILED) {
              s0 = peg$parsenonascii();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseLinkText() {
      var s0;

      if (peg$c27.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c19.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c29.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c30); }
          }
          if (s0 === peg$FAILED) {
            if (peg$c23.test(input.charAt(peg$currPos))) {
              s0 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c24); }
            }
            if (s0 === peg$FAILED) {
              s0 = peg$parsenonascii();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseCodeText() {
      var s0;
